--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.4.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.1"
