--- a/server/package.json
+++ b/server/package.json
@@ -21,11 +21,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.4",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.1"
   }
