--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
